change order of dates

--- a/index.html
+++ b/index.html
@@ -94,16 +94,16 @@
                         <li>
                             Electrical engineer
                             <ul>
-                                <li>Time:    01/07/2015-15/07/2015</li>
                                 <li>Place:   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
+                                <li>Time:    01/07/2015-15/07/2015</li>
                                 <li>Details: 2 weeks for school practice(maintenance of the generator)</li>
                             </ul>
                         </li>
                         <li>
                             RTV repairer
                             <ul>
-                                <li>Time:    02/08/2016-16/08/2016</li>
                                 <li>Place:   ZIG d.o.o, Zagreb (Croatia)</li>
+                                <li>Time:    02/08/2016-16/08/2016</li>
                                 <li>Details: 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
                             </ul>
                         </li>
@@ -114,16 +114,16 @@
                             <li>
                                 Electrical engineer
                                 <ul>
-                                    <li>Time:    01/09/2013-26/06/2017</li>
-                                    <li>Place:   1. tehnicka skola Tesla, Zagreb (Croatia)</li>
+                                    <li>Place:   Technical School Tesla, Zagreb (Croatia)</li>
+                                    <li>Time:    09/2013-06/2017</li>
                                     <li>Details: orientation to low Current</li>
                                 </ul>
                             </li>
                             <li>
                                 Software engineering
                                 <ul>
-                                    <li>Time:    01/10/2017-Present</li>
                                     <li>Place:   Visoko uciliste Algebra, Zagreb (Croatia)</li>
+                                    <li>Time:    01/10/2017-Present</li>
                                     <li>Details: Bachelors in Software Engineering</li>
                                 </ul>
                             </li>
