--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
                     <h3>Tehnologies I used</h3>
                     <ul>
                         <li>
+                            Operating systems
+                            <ul>
+                                <li>[Main OS]Debian(ssh,telnet,makefile,LUKS,SELinux...)</li>
+                                <li>Ubuntu(in virtualbox)</li>
+                                <li>Fedora(in virtualbox)</li>
+                                <li>Tails(liveboot only)</li>
+                                <li>FreeBSD(in virtualbox)</li>
+                                <li>Parrot OS(in virtualbox)</li>
+                                <li>TempleOS(in virtualbox)</li>
+                                <li>Windows 10(few years ago as main OS)</li>
+                                <li>Windows 8(in virtualbox)</li>
+                                <li>Windows 7(many years ago as main OS)</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Virtualization
+                            <ul>
+                                <li>Oracle VirtualBox</li>
+                                <li>VMware</li>
+                                <li>QEMU</li>
+                            </ul>
+                        </li>
+                        <li>
                             Web dev
                             <ul>
                                 <li>Flask</li>
