--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                         <li>[references]> <a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Man-C">for C</a></li>
+                        <li>[references]> <a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
                     </ul>
 
                     <h3>Papers</h3>
@@ -118,7 +119,7 @@
                             Electrical engineer
                             <ul>
                                 <li>Place:   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
-                                <li>Time:    01/07/2015-15/07/2015</li>
+                                <li>Period:  01/07/2015-15/07/2015</li>
                                 <li>Details: 2 weeks for school practice(maintenance of the generator)</li>
                             </ul>
                         </li>
@@ -126,7 +127,7 @@
                             RTV repairer
                             <ul>
                                 <li>Place:   ZIG d.o.o, Zagreb (Croatia)</li>
-                                <li>Time:    02/08/2016-16/08/2016</li>
+                                <li>Period:  02/08/2016-16/08/2016</li>
                                 <li>Details: 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
                             </ul>
                         </li>
@@ -138,7 +139,7 @@
                                 Electrical engineer
                                 <ul>
                                     <li>Place:   Technical School Tesla, Zagreb (Croatia)</li>
-                                    <li>Time:    09/2013-06/2017</li>
+                                    <li>Period:  09/2013-06/2017</li>
                                     <li>Details: orientation to low Current</li>
                                 </ul>
                             </li>
@@ -146,7 +147,7 @@
                                 Software engineering
                                 <ul>
                                     <li>Place:   Visoko uciliste Algebra, Zagreb (Croatia)</li>
-                                    <li>Time:    01/10/2017-Present</li>
+                                    <li>Period:  01/10/2017-Present</li>
                                     <li>Details: Bachelors in Software Engineering</li>
                                 </ul>
                             </li>
