--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
 
                     <h3>Contact</h3>
                     <ul>
-                        <li>Email for job offers: <b>kegljevickarlo[at]gmail.com</b></li>
-                        <li>Email for other: <b>kelj0[at]protonmail.com</b></li>
+                        <li>Email: <b>kelj0[at]protonmail.com</b></li>
                         <li>Github: <a href="https://github.com/kelj0">@kelj0</a></li>
                         <li>Twitter: <a href="https://twitter.com/0x0kelj0">@0x0kelj0</a></li>
                     </ul>
