--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>kelj0</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="shortcut icon" type="image/x-icon" href="freebsd.jpeg">
     </head>
     <body>
         <div id="wrapper">
