--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <div id="middleBox">
                 <h1>Karlo Kegljevic</h1>
                 <p>Student that pursues Bachelors in Software Engineering</p>
-                <p>I have strong interest in cybersecurity</p>
+                <p>I have a strong interest in cybersecurity</p>
                 <div id="scrollable">
                     <h3>Programming Languages I used</h3>
                     <ul>
@@ -25,7 +25,7 @@
                         <li>C#</li>
                     </ul>
 
-                    <h3>Tehnologies I used</h3>
+                    <h3>Technologies I used</h3>
                     <ul>
                         <li>
                             Operating systems
