update project list

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
                         <li>[python]> <a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
                         <li>[fullstack]> <a href="https://github.com/kelj0/SimpleChat">Simple chat(not hosted)</a></li>
                         <li>[CSS]> <a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
+                        <li>[University projects]> <a href="https://github.com/kelj0/university">Java,C#..</a></li>
                         <li>[frontend]> <a href="https://github.com/kelj0/kelj0.github.io"> Portfollo(this page)</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
