--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
         <link rel="shortcut icon" type="image/x-icon" href="freebsd.jpeg">
     </head>
     <body>
+        <!-- 
+            -------------------------------------
+            | xxxx       x  x xxx x     x  xxxx |
+            | x  x       x x  x   x     x  x  x |
+            | x  x  x x  xx   xxx x     x  x  x |
+            | x  x   x   x x  x   x   x x  x  x |
+            | xxxx  x x  x  x xxx xxx x_x  xxxx |
+            -------------------------------------
+        -->
         <div id="wrapper">
             <canvas id="q"></canvas>
             <div id="middleBox">
@@ -13,7 +22,7 @@
                 <p>Student that pursues Bachelors in Software Engineering</p>
                 <p>I have a strong interest in cybersecurity</p>
                 <div id="scrollable">
-                    <h3>Programming Languages I used</h3>
+                    <h3>Programming languages I used</h3>
                     <ul>
                         <li>Python</li>
                         <li>BASH</li>
@@ -30,16 +39,16 @@
                         <li>
                             Operating systems
                             <ul>
-                                <li>[Main OS]Debian(ssh,telnet,makefile,LUKS,SELinux...)</li>
-                                <li>Ubuntu(in virtualbox)</li>
-                                <li>Fedora(in virtualbox)</li>
-                                <li>Tails(liveboot only)</li>
-                                <li>FreeBSD(in virtualbox)</li>
-                                <li>Parrot OS(in virtualbox)</li>
-                                <li>TempleOS(in virtualbox)</li>
-                                <li>Windows 10(few years ago as main OS)</li>
-                                <li>Windows 8(in virtualbox)</li>
-                                <li>Windows 7(many years ago as main OS)</li>
+                                <li>[Main OS]Debian 10</li>
+                                <li>Ubuntu</li>
+                                <li>Fedora</li>
+                                <li>Tails</li>
+                                <li>FreeBSD</li>
+                                <li>Parrot OS</li>
+                                <li>Kali Linux</li>
+                                <li>Whonix</li>
+                                <li>TempleOS</li>
+                                <li>Windows XP/7/8/10</li>
                             </ul>
                         </li>
                         <li>
@@ -61,8 +70,13 @@
                             </ul>
                         </li>
                         <li>
-                            Databases(ORMs,interfaces..)
+                            Databases, ORMs,db interfaces
                             <ul>
+                                <li>MySQL</li>
+                                <li>PosgreSQL</li>
+                                <li>T-SQL</li>
+                                <li>sqlite</li>
+                                <li>Redis</li>
                                 <li>SQLAlchemy</li>
                                 <li>JDBC (sqlite3)</li>
                             </ul>
@@ -70,8 +84,21 @@
                         <li>
                             Networking
                             <ul>
-                                <li>sockets</li>
-                                <li>requests</li>
+                                <li>SSH, telnet, FTP</li>
+                                <li>Wireshark</li>
+                                <li>PuTTY</li>
+                                <li>Nginx</li>
+                                <li>Tomcat</li>
+                                <li>/etc/network/interfaces</li>
+                            </ul>
+                        </li>
+                        <li>
+                            Linux hardening
+                            <ul>
+                                <li>SELinux</li>
+                                <li>LUKS disk encryption</li>
+                                <li>Configuring firewall</li>
+                                <li>/etc/ssh/*</li>
                             </ul>
                         </li>
                         <li>
@@ -101,11 +128,14 @@
                         <li>[fullstack]> <a href="https://github.com/kelj0/SimpleChat">Simple chat(not hosted)</a></li>
                         <li>[CSS]> <a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
                         <li>[University projects]> <a href="https://github.com/kelj0/university">Java,C#..</a></li>
-                        <li>[frontend]> <a href="https://github.com/kelj0/kelj0.github.io"> Portfollo(this page)</a></li>
+                        <li>[frontend]> <a href="https://github.com/kelj0/kelj0.github.io">Portfollo(this page)</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Man-C">for C</a></li>
                         <li>[references]> <a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
+                        <li>[.NET Core/Vue/BASH/Powershell/Java]> <a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA(like puppet, ansible..)</a></li>
+                        <li>[C++]> <a href="https://github.com/kelj0/simple-auth">Authentication server</a></li>
+                        <li>[Python/BASH]> <a href="https://github.com/kelj0/dante">OS, vulnerability, version scanner; exploitation tool and report generator</a></li>
                     </ul>
 
                     <h3>Papers</h3>
@@ -118,18 +148,29 @@
                     <h3>Experience</h3>
                     <ul>
                         <li>
+                            Python developer
+                            <ul>
+                                <li>Place:      Croatian Academic and Research Network - CARNET</li>
+                                <li>Department: National CERT(Computer Emergency Response Team)</li>
+                                <li>Period:     01.03.2020-present</li>
+                                <li>Details:    Developing new features in python(Django), automating deployment(Makefile), introducing a new methodology(TDD), writing tests, supervising test writing, security testing</li>
+                            </ul>
+                        </li>
+
+                        <li>
                             Electrical engineer
                             <ul>
                                 <li>Place:   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
-                                <li>Period:  01/07/2015-15/07/2015</li>
+                                <li>Period:  01.07.2015-15.07.2015</li>
                                 <li>Details: 2 weeks for school practice(maintenance of the generator)</li>
                             </ul>
                         </li>
+
                         <li>
                             RTV repairer
                             <ul>
                                 <li>Place:   ZIG d.o.o, Zagreb (Croatia)</li>
-                                <li>Period:  02/08/2016-16/08/2016</li>
+                                <li>Period:  02.08.2016-16.08.2016</li>
                                 <li>Details: 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
                             </ul>
                         </li>
