--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </ul>
                         </li>
                         <li>
-                            Databases, ORMs,db interfaces
+                            Databases
                             <ul>
                                 <li>MySQL</li>
                                 <li>PosgreSQL</li>
@@ -153,7 +153,7 @@
                                 <li>Place:      Croatian Academic and Research Network - CARNET</li>
                                 <li>Department: National CERT(Computer Emergency Response Team)</li>
                                 <li>Period:     01.03.2020-present</li>
-                                <li>Details:    Developing new features in python(Django), automating deployment(Makefile), introducing a new methodology(TDD), writing tests, supervising test writing, security testing</li>
+                                <li>Details:    Developing new features in Django and Flask, automating deployment, introduced test driven development, writing tests, supervising test writing, security testing</li>
                             </ul>
                         </li>
 
