--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <h3>Experience</h3>
                     <ul>
                         <li>
-                            Devops engineer 
+                            DevOps engineer 
                             <ul>
                                 <li>Place:      Croatian Academic and Research Network - CARNET</li>
                                 <li>Department: National CERT(Computer Emergency Response Team)</li>
