--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                         <li>[references]> <a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
                         <li>[.NET Core/Vue/BASH/Powershell/Java]> <a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA(like puppet, ansible..)</a></li>
                         <li>[C++]> <a href="https://github.com/kelj0/simple-auth">Authentication server</a></li>
+                        <li>[Python]> <a href="https://github.com/kelj0/dr.buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
                         <li>[Python/BASH]> <a href="https://github.com/kelj0/dante">OS, vulnerability, version scanner; exploitation tool and report generator</a></li>
                     </ul>
 
