--- a/index.html
+++ b/index.html
@@ -6,22 +6,15 @@
         <link rel="shortcut icon" type="image/x-icon" href="freebsd.jpeg">
     </head>
     <body>
-        <!-- 
-            -------------------------------------
-            | xxxx       x  x xxx x     x  xxxx |
-            | x  x       x x  x   x     x  x  x |
-            | x  x  x x  xx   xxx x     x  x  x |
-            | x  x   x   x x  x   x   x x  x  x |
-            | xxxx  x x  x  x xxx xxx x_x  xxxx |
-            -------------------------------------
-        -->
+        <!-- да -->
         <div id="wrapper">
             <canvas id="q"></canvas>
             <div id="middleBox">
                 <h1>Karlo Kegljevic</h1>
-                <p>Student that pursues Bachelors in Software Engineering</p>
-                <p>I have a strong interest in cybersecurity</p>
                 <div id="scrollable">
+                    <h3>About:</h3>
+                    <p>Student that pursues Bachelors in Software Engineering</p>
+                    <p>I have a strong interest in cybersecurity</p>
                     <h3>Programming languages I used</h3>
                     <ul>
                         <li>Python</li>
@@ -67,6 +60,7 @@
                                 <li>Vue</li>
                                 <li>JQuery</li>
                                 <li>ASP.NET</li>
+                                <li>JSP</li>
                             </ul>
                         </li>
                         <li>
@@ -75,20 +69,19 @@
                                 <li>MySQL</li>
                                 <li>PosgreSQL</li>
                                 <li>T-SQL</li>
-                                <li>sqlite</li>
+                                <li>SQLite</li>
                                 <li>Redis</li>
                                 <li>SQLAlchemy</li>
-                                <li>JDBC (sqlite3)</li>
+                                <li>JDBC (for sqlite3 and MySQL)</li>
                             </ul>
                         </li>
                         <li>
                             Networking
                             <ul>
                                 <li>SSH, telnet, FTP</li>
-                                <li>Wireshark</li>
+                                <li>Wireshark, tcpdump</li>
                                 <li>PuTTY</li>
-                                <li>Nginx</li>
-                                <li>Tomcat</li>
+                                <li>Nginx, Tomcat</li>
                                 <li>/etc/network/interfaces</li>
                             </ul>
                         </li>
@@ -97,7 +90,6 @@
                             <ul>
                                 <li>SELinux</li>
                                 <li>LUKS disk encryption</li>
-                                <li>Configuring firewall</li>
                                 <li>/etc/ssh/*</li>
                             </ul>
                         </li>
@@ -107,6 +99,7 @@
                                 <li>Swing</li>
                                 <li>SFML</li>
                                 <li>Windows Forms</li>
+                                <li>Pygame</li>
                                 <li>WPF</li>
                             </ul>
                         </li>
@@ -115,8 +108,8 @@
                     <h3>Other (markup,style sheet languages..)</h3>
                     <ul>
                         <li>Markdown</li>
-                        <li>HTML,HTML5</li>
-                        <li>CSS,CSS3</li>
+                        <li>HTML</li>
+                        <li>CSS, SCSS</li>
                         <li>Texteditor: (neo)vim</li>
                     </ul>
 
@@ -142,7 +135,6 @@
 
                     <h3>Papers</h3>
                     <ul>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta</a></li>
                         <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS</a></li>
                         <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala</a></li>
                     </ul>
@@ -150,30 +142,35 @@
                     <h3>Experience</h3>
                     <ul>
                         <li>
-                            DevOps engineer 
+                            <b>DevOps engineer</b>
                             <ul>
-                                <li>Place:      Croatian Academic and Research Network - CARNET</li>
-                                <li>Department: National CERT(Computer Emergency Response Team)</li>
-                                <li>Period:     01.03.2020-present</li>
-                                <li>Details:    Developing new features in Django and Flask, automating deployment, introduced test driven development, writing tests, supervising test writing, security testing</li>
+                                <li><b>Place:</b>      Croatian Academic and Research Network - CARNET</li>
+                                <li><b>Department:</b> National CERT(Computer Emergency Response Team)</li>
+                                <li><b>Period:</b>     01.03.2020-present</li>
+                                <li><b>Details:</b>    </br>Firstly, I worked as a Python developer on a nationwide project. We used Django as our backend and PostgreSQL. In the first few months, I introduced a Test Driven development which I later also supervised. After the first project, 
+                                                I was appointed team leader for a new project. In that project, I was designing database diagrams, implementing functions in PostgreSQL, designing and implementing fullstack web application in Flask which was backboned by python 
+                                                crawling scripts which were also written by me. Additionally, I worked on setting up applications on linux based servers using Nginx as our web server and I tried to automate as much as I could using IaC solutions. In addition, at 
+                                                times I did security testing for our applications which I followed up with writing patches for those vulnerabilities.</br>
+                                                <i>Keywords: Python, Django, Flask, Nginx, PostgreSQL</i>
+                                </li>
                             </ul>
                         </li>
-
+                        </br>
                         <li>
-                            Electrical engineer
+                            <b>Electrical engineer</b>
                             <ul>
-                                <li>Place:   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
-                                <li>Period:  01.07.2015-15.07.2015</li>
-                                <li>Details: 2 weeks for school practice(maintenance of the generator)</li>
+                                <li><b>Place:</b>   Zagrebacke otpadne vode, Zagreb (Croatia)</li>
+                                <li><b>Period:</b>  01.07.2015-15.07.2015</li>
+                                <li><b>Details:</b> 2 weeks for school practice(maintenance of the generator)</li>
                             </ul>
                         </li>
-
+                        </br>
                         <li>
-                            RTV repairer
+                            <b>RTV repairer</b>
                             <ul>
-                                <li>Place:   ZIG d.o.o, Zagreb (Croatia)</li>
-                                <li>Period:  02.08.2016-16.08.2016</li>
-                                <li>Details: 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
+                                <li><b>Place:</b>   ZIG d.o.o, Zagreb (Croatia)</li>
+                                <li><b>Period:</b>  02.08.2016-16.08.2016</li>
+                                <li><b>Details:</b> 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
                             </ul>
                         </li>
                     </ul>
@@ -183,17 +180,17 @@
                             <li>
                                 Electrical engineer
                                 <ul>
-                                    <li>Place:   Technical School Tesla, Zagreb (Croatia)</li>
-                                    <li>Period:  09/2013-06/2017</li>
-                                    <li>Details: orientation to low Current</li>
+                                    <li><b>Place:</b>   Technical School Tesla, Zagreb (Croatia)</li>
+                                    <li><b>Period:</b>  09/2013-06/2017</li>
+                                    <li><b>Details:</b> orientation to low Current</li>
                                 </ul>
                             </li>
                             <li>
                                 Software engineering
                                 <ul>
-                                    <li>Place:   Visoko uciliste Algebra, Zagreb (Croatia)</li>
-                                    <li>Period:  01/10/2017-Present</li>
-                                    <li>Details: Bachelors in Software Engineering</li>
+                                    <li><b>Place:</b>   Visoko uciliste Algebra, Zagreb (Croatia)</li>
+                                    <li><b>Period:</b>  01/10/2017-Present</li>
+                                    <li><b>Details:</b> Bachelors in Software Engineering</li>
                                 </ul>
                             </li>
                         </ul>
