--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
                 <h1>Karlo Kegljevic</h1>
                 <div id="scrollable">
                     <h3>About:</h3>
-                    <p>Student that pursues Bachelors in Software Engineering</p>
-                    <p>I have a strong interest in cybersecurity</p>
+                    <p>
+                        I am a software engineer that finds his way around networking, programming and security.</br> 
+                        I find great joy in dissesecting every bit of software and hardware that I get for the purpuse of breaking it and then fixing it</br>
+                        In college I learned Java and C#, but my language of choice is still Python that I learned by myself. I got low level languages experience while I was working on a project where we were implementing our OS in C++.</br>
+                        For programming and server managing most of the time I use tmux and (neo)vim.</br>
+                        When I'm designing the database 100% of time I will use pen and paper and then some diagram software.
+                    </p>
                     <h3>Programming languages I used</h3>
                     <ul>
                         <li>Python</li>
@@ -115,22 +120,36 @@
 
                     <h3>Projects</h3>
                     <ul>
-                        <li>[fullstack]> <a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop(hosted on heroku)</a></li>
-                        <li>[BASH]> <a href="https://github.com/kelj0/dotfiles/blob/master/deploy.sh">Script that setups configs on Linux</a></li>
-                        <li>[python]> <a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
-                        <li>[fullstack]> <a href="https://github.com/kelj0/SimpleChat">Simple chat(not hosted)</a></li>
-                        <li>[CSS]> <a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
-                        <li>[University projects]> <a href="https://github.com/kelj0/university">Java,C#..</a></li>
-                        <li>[frontend]> <a href="https://github.com/kelj0/kelj0.github.io">Portfollo(this page)</a></li>
-                        <li>[references]> <a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
-                        <li>[references]> <a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
-                        <li>[references]> <a href="https://github.com/kelj0/Man-C">for C</a></li>
-                        <li>[references]> <a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
-                        <li>[.NET Core/Vue/BASH/Powershell/Java]> <a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA(like puppet, ansible..)</a></li>
-                        <li>[C++]> <a href="https://github.com/kelj0/simple-auth">Authentication server[TODO]</a></li>
-                        <li>[Python]> <a href="https://github.com/kelj0/dr.buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
-                        <li>[Python]> <a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
-                        <li>[Python]> <a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
+                        <li>
+                            <b>Python:</b>
+                            <ul>
+                                <li><a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop</a></li>
+                                <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
+                                <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
+                                <li><a href="https://github.com/kelj0/dr.buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
+                                <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
+                                <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <b>References:</b>
+                            <ul>
+                                <li><a href="https://github.com/kelj0/LearningPython#python-references">for Python</a></li>
+                                <li><a href="https://github.com/kelj0/Man-Linux">for Linux</a></li>
+                                <li><a href="https://github.com/kelj0/Man-C">for C</a></li>
+                                <li><a href="https://github.com/kelj0/Web-Dev">for Frontend</a></li>
+                            </ul>
+                        <li> 
+                            <b>Other:</b>
+                            <ul>
+                                <li><a href="https://github.com/kelj0/dotfiles/blob/master/deploy.sh">Script that setups configs on Linux [BASH]</a></li>
+                                <li><a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
+                                <li><a href="https://github.com/kelj0/kelj0.github.io">Portfollo(this page)</a></li>
+                                <li><a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA (like puppet) [.NET Core/Vue/BASH/Powershell/Java]</a></li>
+                                <li><a href="https://github.com/kelj0/simple-auth">Authentication server [C++][TODO]</a></li>
+                                <li><a href="https://github.com/kelj0/university">Java, C#, T-SQL</a></li>
+                            </ul>
+                        </li>
                     </ul>
 
                     <h3>Papers</h3>
@@ -178,7 +197,7 @@
                     <h3>Education</h3>
                         <ul>
                             <li>
-                                Electrical engineer
+                                <b>Electrical engineer</b>
                                 <ul>
                                     <li><b>Place:</b>   Technical School Tesla, Zagreb (Croatia)</li>
                                     <li><b>Period:</b>  09/2013-06/2017</li>
@@ -186,7 +205,7 @@
                                 </ul>
                             </li>
                             <li>
-                                Software engineering
+                                <b>Software engineering</b>
                                 <ul>
                                     <li><b>Place:</b>   Visoko uciliste Algebra, Zagreb (Croatia)</li>
                                     <li><b>Period:</b>  01/10/2017-Present</li>
