--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="middleBox">
                 <h1>Karlo Kegljevic</h1>
                 <div id="scrollable">
-                    <h3>About:</h3>
+                    <h3>About</h3>
                     <p>
                         I am a software engineer that finds his way around networking, programming and security.</br> 
                         I find great joy in dissesecting every bit of software and hardware that I get for the purpuse of breaking it and then fixing it</br>
