--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>kelj0</title>
+        <meta name="description" content="kelj0's portfolio">
         <link rel="stylesheet" href="style.css">
         <link rel="shortcut icon" type="image/x-icon" href="freebsd.jpeg">
     </head>
