--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <ul>
                                 <li><b>Place:</b>   ZIG d.o.o, Zagreb (Croatia)</li>
                                 <li><b>Period:</b>  02.08.2016-16.08.2016</li>
-                                <li><b>Details:</b> 2 weeks for school practice(repairing TVs, amplifires, speakers.. Sound limitation in bars,clubs..)</li>
+                                <li><b>Details:</b> 2 weeks for school practice(repairing TVs, amplifiers, speakers.. Sound limitation in bars,clubs..)</li>
                             </ul>
                         </li>
                     </ul>
