--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <h3>About</h3>
                     <p>
                         I am a software engineer that finds his way around networking, programming and security.</br> 
-                        I find great joy in dissesecting every bit of software and hardware that I get for the purpuse of breaking it and then fixing it</br>
+                        I find great joy in dissesecting every bit of software and hardware that I get for the purpuse of breaking it and then fixing it.</br>
                         In college I learned Java and C#, but my language of choice is still Python that I learned by myself. I got low level languages experience while I was working on a project where we were implementing our OS in C++.</br>
                         For programming and server managing most of the time I use tmux and (neo)vim.</br>
                         When I'm designing the database 100% of time I will use pen and paper and then some diagram software.
@@ -27,6 +27,7 @@
                         <li>Email: <b>kelj0[at]protonmail.com</b></li>
                         <li>Github: <a href="https://github.com/kelj0">@kelj0</a></li>
                         <li>Twitter: <a href="https://twitter.com/0x0kelj0">@0x0kelj0</a></li>
+                        <li>Portfolio: <a href="https://kelj0.com">https://kelj0.com</a> | <a href="https://github.com/kelj0/kelj0.github.io">source</a></li>
                     </ul>
                     
                     <h3>Experience</h3>
