--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
 
                     <h3>Papers</h3>
                     <ul>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS</a></li>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS (2018)</a></li>
                     </ul>
 
                     <h3>Programming languages I used</h3>
