--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
                 <div id="scrollable">
                     <h3>About</h3>
                     <p>
-                        I am a software engineer that finds his way around networking, programming and security.</br> 
-                        I find great joy in dissesecting every bit of software and hardware that I get for the purpuse of breaking it and then fixing it.</br>
-                        In college I learned Java and C#, but my language of choice is still Python that I learned by myself. I got low level languages experience while I was working on a project where we were implementing our OS in C++.</br>
+                        I am a software engineer that finds his way around networking, programming and security.</br>
+                        I find great joy in creating anything from zero. If I get my hands on any software or hardware I enjoj in dissesecting every bit of it for the purpuse of breaking it and then fixing it.</br>
+                        In college I learned Java and C#, but my language of choice is still Python that I learned by myself. </br>
+                        I got low level languages experience while I was working on a project where we were implementing our OS in C++.</br>
                         For programming and server managing most of the time I use tmux and (neo)vim.</br>
-                        When I'm designing the database 100% of time I will use pen and paper and then some diagram software.
+                        Currently I am using my time to learn more about computer security and data science.
                     </p>
                    
                     <h3>Contact</h3>
                     <ul>
-                        <li>Email: <b>kelj0[at]protonmail.com</b></li>
+                        <li>Email: <b>kegljevickarlo[at]protonmail.com</b></li>
                         <li>Github: <a href="https://github.com/kelj0">@kelj0</a></li>
                         <li>Twitter: <a href="https://twitter.com/0x0kelj0">@0x0kelj0</a></li>
                         <li>Portfolio: <a href="https://kelj0.com">https://kelj0.com</a> | <a href="https://github.com/kelj0/kelj0.github.io">source</a></li>
@@ -70,19 +71,19 @@
                     <h3>Education</h3>
                         <ul>
                             <li>
-                                <b>Electrical engineer</b>
-                                <ul>
-                                    <li><b>Place:</b>   Technical School Tesla, Zagreb (Croatia)</li>
-                                    <li><b>Period:</b>  09/2013-06/2017</li>
-                                    <li><b>Details:</b> orientation to low Current</li>
-                                </ul>
-                            </li>
-                            <li>
                                 <b>Software engineering</b>
                                 <ul>
                                     <li><b>Place:</b>   Visoko uciliste Algebra, Zagreb (Croatia)</li>
                                     <li><b>Period:</b>  01/10/2017-Present</li>
                                     <li><b>Details:</b> Bachelors in Software Engineering</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <b>Electrical engineer</b>
+                                <ul>
+                                    <li><b>Place:</b>   Technical School Tesla, Zagreb (Croatia)</li>
+                                    <li><b>Period:</b>  09/2013-06/2017</li>
+                                    <li><b>Details:</b> orientation to low Current</li>
                                 </ul>
                             </li>
                         </ul>
@@ -92,12 +93,12 @@
                         <li>
                             <b>Python:</b>
                             <ul>
-                                <li><a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop</a></li>
-                                <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
-                                <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
+                                <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
                                 <li><a href="https://github.com/kelj0/dr.buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
-                                <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
+                                <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
+                                <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
+                                <li><a href="https://github.com/kelj0/Simple-FoodShop">Simple Food Shop</a></li>
                             </ul>
                         </li>
                         <li>
@@ -111,21 +112,21 @@
                         <li> 
                             <b>Other:</b>
                             <ul>
+                                <li><a href="https://github.com/kelj0/university">College projects [Java, C#, T-SQL]</a></li>
+                                <li><a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA (like puppet) [.NET Core/Vue/BASH/Powershell/Java]</a></li>
+                                <li><a href="https://github.com/kelj0/simple-auth">Authentication server [C++][TODO]</a></li>
                                 <li><a href="https://github.com/kelj0/dotfiles/blob/master/deploy.sh">Script that setups configs on Linux [BASH]</a></li>
                                 <li><a href="https://github.com/kelj0/kelj0-css">CSS framework</a></li>
                                 <li><a href="https://github.com/kelj0/kelj0.github.io">Portfollo(this page)</a></li>
-                                <li><a href="https://github.com/kelj0/simple-configuration-manager">Very simple implementation of CCA (like puppet) [.NET Core/Vue/BASH/Powershell/Java]</a></li>
-                                <li><a href="https://github.com/kelj0/simple-auth">Authentication server [C++][TODO]</a></li>
-                                <li><a href="https://github.com/kelj0/university">Java, C#, T-SQL</a></li>
                             </ul>
                         </li>
                     </ul>
 
-                    <h3>Papers</h3>
+                    <h3>Science papers</h3>
                     <ul>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017</a></li>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS (2018)</a></li>
+                        <li><a href="./papers/KaT_OS.pdf">Kat OS (2018)</a></li>
+                        <li><a href="./papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017)</a></li>
+                        <li><a href="./papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
                     </ul>
 
                     <h3>Programming languages I used</h3>
