--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <b>Python:</b>
                             <ul>
                                 <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
-                                <li><a href="https://github.com/kelj0/dr.buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
+                                <li><a href="https://github.com/kelj0/dr_buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
                                 <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
