--- a/index_hr.html
+++ b/index_hr.html
@@ -95,7 +95,7 @@
                             <b>Python:</b>
                             <ul>
                                 <li><a href="https://github.com/kelj0/dante">skener ranjivosti, alat za kompromitaciju sustava i generator izvješća</a></li>
-                                <li><a href="https://github.com/kelj0/dr.buster">Jednostavan, ali efektivan alat za pronalaženje direktorija na internetskim stranicama</a></li>
+                                <li><a href="https://github.com/kelj0/dr_buster">Jednostavan, ali efektivan alat za pronalaženje direktorija na internetskim stranicama</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">Minimalni exploit-db omotač</a></li>
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot koji ima korisne komande</a></li>
                                 <li><a href="https://github.com/kelj0/SimpleChat">Jednostavna implementacija aplikacije za razgovor putem interneta</a></li>
@@ -125,9 +125,9 @@
 
                     <h3>Znanstvene analize i radovi</h3>
                     <ul>
-                        <li><a href="./papers/KaT_OS.pdf">Kat OS (2018)</a></li>
-                        <li><a href="./papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017)</a></li>
-                        <li><a href="./papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS (2018)</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017</a></li>
+                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
                     </ul>
 
                     <h3>Programski jezici kojima vladam</h3>
