change links and push papers

--- a/index.html
+++ b/index.html
@@ -93,8 +93,9 @@
                         <li>
                             <b>Python:</b>
                             <ul>
-                                <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
                                 <li><a href="https://github.com/kelj0/dr_buster">Simple, yet effective web path finder implemented with multiprocessing in Python</a></li>
+                                <li><a href="https://github.com/kelj0/dante">vulnerability, version scanner; exploitation tool and report generator</a></li>
+                                <li><a href="https://github.com/kelj0/university/blob/master/SPO/SPO_Karlo_Kegljevic.ipynb">Data analysis of dresses</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">A minimal exploit-db wrapper written in Python</a></li>
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot that has some useful commands</a></li>
                                 <li><a href="https://github.com/kelj0/SimpleChat">Simple chat</a></li>
@@ -124,9 +125,10 @@
 
                     <h3>Science papers</h3>
                     <ul>
-                        <li><a href="./papers/KaT_OS.pdf">Kat OS (2018)</a></li>
-                        <li><a href="./papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017)</a></li>
-                        <li><a href="./papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
+                        <li><a href="https://kelj0.com/papers/Karlo_Kegljevic_ZAVRSNI.pdf">Final thesis (2020)</a></li>
+                        <li><a href="https://kelj0.com/papers/KaT_OS.pdf">Kat OS (2018)</a></li>
+                        <li><a href="https://kelj0.com/papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017)</a></li>
+                        <li><a href="https://kelj0.com/papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
                     </ul>
 
                     <h3>Programming languages I used</h3>
