--- a/index_hr.html
+++ b/index_hr.html
@@ -94,8 +94,9 @@
                         <li>
                             <b>Python:</b>
                             <ul>
-                                <li><a href="https://github.com/kelj0/dante">skener ranjivosti, alat za kompromitaciju sustava i generator izvješća</a></li>
                                 <li><a href="https://github.com/kelj0/dr_buster">Jednostavan, ali efektivan alat za pronalaženje direktorija na internetskim stranicama</a></li>
+                                <li><a href="https://github.com/kelj0/dante">skener ranjivosti, alat za kompromitaciju sustava i generator izvješća</a></li>
+                                <li><a href="https://github.com/kelj0/university/blob/master/SPO/SPO_Karlo_Kegljevic.ipynb">Analiza haljina</a></li>
                                 <li><a href="https://github.com/kelj0/exploit-db-wrapper">Minimalni exploit-db omotač</a></li>
                                 <li><a href="https://github.com/kelj0/IRCat">IRC bot koji ima korisne komande</a></li>
                                 <li><a href="https://github.com/kelj0/SimpleChat">Jednostavna implementacija aplikacije za razgovor putem interneta</a></li>
@@ -125,9 +126,10 @@
 
                     <h3>Znanstvene analize i radovi</h3>
                     <ul>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/KaT_OS.pdf">Kat OS (2018)</a></li>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017</a></li>
-                        <li><a href="https://cdn.jsdelivr.net/gh/kelj0/university/Papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
+                        <li><a href="https://kelj0.com/papers/Karlo_Kegljevic_ZAVRSNI.pdf">Zavrsni rad (2020)</a></li>
+                        <li><a href="https://kelj0.com/papers/KaT_OS.pdf">Kat OS (2018)</a></li>
+                        <li><a href="https://kelj0.com/papers/Kegljevic_Cluster_racunala.pdf">Cluster racunala (2017)</a></li>
+                        <li><a href="https://kelj0.com/papers/CLANAK_Karlo_Kegljevic_R2.pdf">Analiza kriptovaluta (2017)</a></li>
                     </ul>
 
                     <h3>Programski jezici kojima vladam</h3>
@@ -146,8 +148,6 @@
                         <li>C++</li>
                         <li>Java</li>
                         <li>PHP</li>
-                        <li>csh</li>
-                        <li>Zsh</li>
                     </ul>
                    
                     <h3>Tehnologije koje sam koristio/koristim</h3>
